--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,7 +1,5 @@
-version: "3.2"
-
+version: "2.4"
 services:
-
   mysql:
     image: mysql:5.6
     restart: on-failure
@@ -12,12 +10,20 @@ services:
       - type: bind
         source: ../webapp/node-mysql-crud-app/create_table.sql
         target: /docker-entrypoint-initdb.d/create_table.sql
+      - type: bind
+        source: ./checkiftablexists.sh
+        target: /checkiftablexists.sh
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_USER=dpuser
       - MYSQL_PASSWORD=dppassed
       - MYSQL_DATABASE=dp
-
+    healthcheck:
+      test: ["CMD", "bash", "/checkiftablexists.sh" ,"dp", "players"]
+      start_period: 30s
+      interval: 5s
+      timeout: 3s
+      retries: 4
   webapp:
     image: dp_webapp
     restart: on-failure
@@ -25,9 +31,21 @@ services:
       - type: bind
         source: ./data/webapp
         target: /node-mysql-crud-app/public/assets/img
+      - type: bind
+        source: ./healthcheck.js
+        target: /healthcheck.js
     environment:
       - DB_URL=mysql://dpuser:dppassed@mysql/dp
-
+    healthcheck:
+      # test: ["CMD", "curl", "http://localhost/"]
+      test: ["CMD", "node", "/healthcheck.js"]
+      start_period: 10s
+      interval: 2s
+      timeout: 3s
+      retries: 4
+    depends_on:
+      mysql:
+        condition: service_healthy # or service_started
   nginx:
     image: nginx:1.17.3
     ports:
@@ -37,3 +55,7 @@ services:
       - type: bind
         source: ./nginx.conf
         target: /etc/nginx/nginx.conf
+    depends_on:
+      webapp:
+        condition: service_healthy
+
