--- a/docker-swarm/docker-compose-log.yaml
+++ b/docker-swarm/docker-compose-log.yaml
@@ -15,7 +15,7 @@ services:
       - loki_network
 
   grafana:
-    image: grafana/grafana:master
+    image: grafana/grafana:6.3.5
     ports:
       - "3000:3000"
     networks:
