--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -1,6 +1,8 @@
 FROM node:10.15.3-alpine
 
-ADD node-mysql-crud-app /node-mysql-crud-app
+ADD node-mysql-crud-app/package-lock.json \
+    node-mysql-crud-app/package.json \
+    /node-mysql-crud-app/
 
 WORKDIR /node-mysql-crud-app
 
@@ -9,6 +11,8 @@ RUN mkdir -p public/assets/img/ && \
 
 ENV DB_URL='mysql://user:passwd@localhost:port/database' \
     WEB_PORT=80
+
+ADD node-mysql-crud-app /node-mysql-crud-app
 
 ENTRYPOINT [ "node", "app.js" ]
 
